--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,25 @@
 
 
-$primary: #aa0000;
-$border-radius: 25px;
-
-.btn-primary{
-    color: $primary;
-    border-radius: $border-radius;
-    border-color: black;
-}
+$light: #3E37F7;
 
 .login-box{
-    max-width: 600px;
+    width: 25vw;
+    height: 50vh;
     margin: 0 auto;
+}
+
+.auth-btn{
+    width: 100%;
+    height: 6vh;
+    font-size: 4rem;
+    font-weight: bold;
+}
+.topic{
+    color: $light;
+    font-size: 4rem;
+}
+.form-control{
+    height: 6vh;
 }
 
 @import '~bootstrap/scss/bootstrap.scss';
