sign in pg done

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,5 +21,10 @@ $light: #3E37F7;
 .form-control{
     height: 6vh;
 }
+.para{
+    width: 100%;
+    text-align: center;
+
+}
 
 @import '~bootstrap/scss/bootstrap.scss';
