--- a/src/App.scss
+++ b/src/App.scss
@@ -28,5 +28,10 @@ $light: #3E37F7;
 .navbar{
     z-index: 10;
 }
+.box{
+    width: 75vw;
+    height: 65vh;
+    margin: 0 auto;
+}
 
 @import '~bootstrap/scss/bootstrap.scss';
